# MADS-ML-FloridoM

./: .gitignore  README.md  model.toml  pyproject.toml  settings.toml
data/processed/heatmaps/: trial15_epoch100_patience15_metrics.csv  variant_ranking_seed42.csv
side_project/: README.md  SUMMARY.md  generate_popular_post.py  predict.py  test_my_posts.py  test_predictions.py  train_popularity.py
src/: dutchrapport.txt  hypertuning.py  main.py  plot_trial15_heatmap.py  report.txt  train_mlflow.py  visualize.py
src/ray/: __init__.py
