[project]
name = "mads-ml-floridom"
version = "0.1.0"
description = "MADS Machine Learning project by Florido Meacci"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.0.0",
    "torch>=2.0.0",
    "seaborn>=0.12.0",
    "mads_datasets>=0.1.0",
    "mltrainer>=0.1.0",
    "tomlserializer>=0.1.0",
    "tensorboard>=2.14.0",
    "torch-tb-profiler>=0.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
